@@ -747,6 +747,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-8362. Java Compilation Error in TestHdfsConfigFields.java
     (Arshad Mohammad via vinayakumarb)
 
+    HDFS-8358. TestTraceAdmin fails (Masatake Iwasaki via kihwal)
+
+
 Release 2.7.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
